LibStereoKit.jl


function solid_set_velocity_ang(solid, radians_per_second)
    @ccall StereoKitC.solid_set_velocity_ang(solid::solid_t, radians_per_second::Ptr{vec3})::Cvoid
end

function solid_get_pose(solid, out_pose)
    @ccall StereoKitC.solid_get_pose(solid::solid_t, out_pose::Ptr{pose_t})::Cvoid
end

const model_node_id = Int32

@cenum anim_mode_::UInt32 begin
    anim_mode_loop = 0
    anim_mode_once = 1
    anim_mode_manual = 2
end

function model_find(id)
    @ccall StereoKitC.model_find(id::Ptr{Cchar})::model_t
end

function model_copy(model)
    @ccall StereoKitC.model_copy(model::model_t)::model_t
end

# no prototype is found for this function at stereokit.h:1196:22, please use with caution
function model_create()
    @ccall StereoKitC.model_create()::model_t
end

function model_create_mesh(mesh, material)
    @ccall StereoKitC.model_create_mesh(mesh::mesh_t, material::material_t)::model_t
end

function model_create_mem(filename, data, data_size, shader)
    @ccall StereoKitC.model_create_mem(filename::Ptr{Cchar}, data::Ptr{Cvoid}, data_size::Csize_t, shader::shader_t)::model_t
end

function model_create_file(filename, shader)
    @ccall StereoKitC.model_create_file(filename::Ptr{Cchar}, shader::shader_t)::model_t
end

function model_set_id(model, id)
    @ccall StereoKitC.model_set_id(model::model_t, id::Ptr{Cchar})::Cvoid
end

function model_addref(model)
    @ccall StereoKitC.model_addref(model::model_t)::Cvoid
end

function model_release(model)
    @ccall StereoKitC.model_release(model::model_t)::Cvoid
end

function model_draw(model, transform, color_linear, layer)
    @ccall StereoKitC.model_draw(model::model_t, transform::matrix, color_linear::color128, layer::render_layer_)::Cvoid
end

function model_recalculate_bounds(model)
    @ccall StereoKitC.model_recalculate_bounds(model::model_t)::Cvoid
end

function model_set_bounds(model, bounds)
    @ccall StereoKitC.model_set_bounds(model::model_t, bounds::Ptr{bounds_t})::Cvoid
end

function model_get_bounds(model)
    @ccall StereoKitC.model_get_bounds(model::model_t)::bounds_t
end

function model_ray_intersect(model, model_space_ray, out_pt)
    @ccall StereoKitC.model_ray_intersect(model::model_t, model_space_ray::ray_t, out_pt::Ptr{ray_t})::bool32_t
end

function model_step_anim(model)
    @ccall StereoKitC.model_step_anim(model::model_t)::Cvoid
end

function model_play_anim(model, animation_name, mode)
    @ccall StereoKitC.model_play_anim(model::model_t, animation_name::Ptr{Cchar}, mode::anim_mode_)::bool32_t
end

function model_play_anim_idx(model, index, mode)
    @ccall StereoKitC.model_play_anim_idx(model::model_t, index::Int32, mode::anim_mode_)::Cvoid
end

function model_set_anim_time(model, time)
    @ccall StereoKitC.model_set_anim_time(model::model_t, time::Cfloat)::Cvoid
end

function model_set_anim_completion(model, percent)
    @ccall StereoKitC.model_set_anim_completion(model::model_t, percent::Cfloat)::Cvoid
end

function model_anim_find(model, animation_name)
    @ccall StereoKitC.model_anim_find(model::model_t, animation_name::Ptr{Cchar})::Int32
end

function model_anim_count(model)
    @ccall StereoKitC.model_anim_count(model::model_t)::Int32
end

function model_anim_active(model)
    @ccall StereoKitC.model_anim_active(model::model_t)::Int32
end

function model_anim_active_mode(model)
    @ccall StereoKitC.model_anim_active_mode(model::model_t)::anim_mode_
end

function model_anim_active_time(model)
    @ccall StereoKitC.model_anim_active_time(model::model_t)::Cfloat
end

function model_anim_active_completion(model)
    @ccall StereoKitC.model_anim_active_completion(model::model_t)::Cfloat
end

function model_anim_get_name(model, index)
    @ccall StereoKitC.model_anim_get_name(model::model_t, index::Int32)::Ptr{Cchar}
end

function model_anim_get_duration(model, index)
    @ccall StereoKitC.model_anim_get_duration(model::model_t, index::Int32)::Cfloat
end

function model_get_name(model, subset)
    @ccall StereoKitC.model_get_name(model::model_t, subset::Int32)::Ptr{Cchar}
end

function model_get_material(model, subset)
    @ccall StereoKitC.model_get_material(model::model_t, subset::Int32)::material_t
end

function model_get_mesh(model, subset)
    @ccall StereoKitC.model_get_mesh(model::model_t, subset::Int32)::mesh_t
end

function model_get_transform(model, subset)
    @ccall StereoKitC.model_get_transform(model::model_t, subset::Int32)::matrix
end

function model_set_material(model, subset, material)
    @ccall StereoKitC.model_set_material(model::model_t, subset::Int32, material::material_t)::Cvoid
end

function model_set_mesh(model, subset, mesh)
    @ccall StereoKitC.model_set_mesh(model::model_t, subset::Int32, mesh::mesh_t)::Cvoid
end

function model_set_transform(model, subset, transform)
    @ccall StereoKitC.model_set_transform(model::model_t, subset::Int32, transform::Ptr{matrix})::Cvoid
end

function model_remove_subset(model, subset)
    @ccall StereoKitC.model_remove_subset(model::model_t, subset::Int32)::Cvoid
end

function model_add_named_subset(model, name, mesh, material, transform)
    @ccall StereoKitC.model_add_named_subset(model::model_t, name::Ptr{Cchar}, mesh::mesh_t, material::material_t, transform::Ptr{matrix})::Int32
end

function model_add_subset(model, mesh, material, transform)
    @ccall StereoKitC.model_add_subset(model::model_t, mesh::mesh_t, material::material_t, transform::Ptr{matrix})::Int32
end

function model_add_subset_n(model, name, mesh, material, transform)
    @ccall StereoKitC.model_add_subset_n(model::model_t, name::Ptr{Cchar}, mesh::mesh_t, material::material_t, transform::Ptr{matrix})::Int32
end

function model_subset_count(model)
    @ccall StereoKitC.model_subset_count(model::model_t)::Int32
end

function model_node_add(model, name, model_transform, mesh, material, solid)
    @ccall StereoKitC.model_node_add(model::model_t, name::Ptr{Cchar}, model_transform::matrix, mesh::mesh_t, material::material_t, solid::bool32_t)::model_node_id
end

function model_node_add_child(model, parent, name, local_transform, mesh, material, solid)
    @ccall StereoKitC.model_node_add_child(model::model_t, parent::model_node_id, name::Ptr{Cchar}, local_transform::matrix, mesh::mesh_t, material::material_t, solid::bool32_t)::model_node_id
end

function model_node_find(model, name)
    @ccall StereoKitC.model_node_find(model::model_t, name::Ptr{Cchar})::model_node_id
end

function model_node_sibling(model, node)
    @ccall StereoKitC.model_node_sibling(model::model_t, node::model_node_id)::model_node_id
end

function model_node_parent(model, node)
    @ccall StereoKitC.model_node_parent(model::model_t, node::model_node_id)::model_node_id
end

function model_node_child(model, node)
    @ccall StereoKitC.model_node_child(model::model_t, node::model_node_id)::model_node_id
end

function model_node_count(model)
    @ccall StereoKitC.model_node_count(model::model_t)::Int32
end

function model_node_index(model, index)
    @ccall StereoKitC.model_node_index(model::model_t, index::Int32)::model_node_id
end

function model_node_visual_count(model)
    @ccall StereoKitC.model_node_visual_count(model::model_t)::Int32
end

function model_node_visual_index(model, index)
    @ccall StereoKitC.model_node_visual_index(model::model_t, index::Int32)::model_node_id
end

function model_node_iterate(model, node)
    @ccall StereoKitC.model_node_iterate(model::model_t, node::model_node_id)::model_node_id
end

function model_node_get_root(model)
    @ccall StereoKitC.model_node_get_root(model::model_t)::model_node_id
end

function model_node_get_name(model, node)
    @ccall StereoKitC.model_node_get_name(model::model_t, node::model_node_id)::Ptr{Cchar}
end

function model_node_get_solid(model, node)
    @ccall StereoKitC.model_node_get_solid(model::model_t, node::model_node_id)::bool32_t
end

function model_node_get_visible(model, node)
    @ccall StereoKitC.model_node_get_visible(model::model_t, node::model_node_id)::bool32_t
end

function model_node_get_material(model, node)
    @ccall StereoKitC.model_node_get_material(model::model_t, node::model_node_id)::material_t
end

function model_node_get_mesh(model, node)
    @ccall StereoKitC.model_node_get_mesh(model::model_t, node::model_node_id)::mesh_t
end

function model_node_get_transform_model(model, node)
    @ccall StereoKitC.model_node_get_transform_model(model::model_t, node::model_node_id)::matrix
end

function model_node_get_transform_local(model, node)
    @ccall StereoKitC.model_node_get_transform_local(model::model_t, node::model_node_id)::matrix
end

function model_node_set_name(model, node, name)
    @ccall StereoKitC.model_node_set_name(model::model_t, node::model_node_id, name::Ptr{Cchar})::Cvoid
end

function model_node_set_solid(model, node, solid)
    @ccall StereoKitC.model_node_set_solid(model::model_t, node::model_node_id, solid::bool32_t)::Cvoid
end

function model_node_set_visible(model, node, visible)
    @ccall StereoKitC.model_node_set_visible(model::model_t, node::model_node_id, visible::bool32_t)::Cvoid
end

function model_node_set_material(model, node, material)
    @ccall StereoKitC.model_node_set_material(model::model_t, node::model_node_id, material::material_t)::Cvoid
end

function model_node_set_mesh(model, node, mesh)
    @ccall StereoKitC.model_node_set_mesh(model::model_t, node::model_node_id, mesh::mesh_t)::Cvoid
end

function model_node_set_transform_model(model, node, transform_model_space)
    @ccall StereoKitC.model_node_set_transform_model(model::model_t, node::model_node_id, transform_model_space::matrix)::Cvoid
end

function model_node_set_transform_local(model, node, transform_local_space)
    @ccall StereoKitC.model_node_set_transform_local(model::model_t, node::model_node_id, transform_local_space::matrix)::Cvoid
end

@cenum sprite_type_::UInt32 begin
    sprite_type_atlased = 0
    sprite_type_single = 1
end

function sprite_create(sprite, type, atlas_id)
    @ccall StereoKitC.sprite_create(sprite::tex_t, type::sprite_type_, atlas_id::Ptr{Cchar})::sprite_t
end

function sprite_create_file(filename, type, atlas_id)
    @ccall StereoKitC.sprite_create_file(filename::Ptr{Cchar}, type::sprite_type_, atlas_id::Ptr{Cchar})::sprite_t
end

function sprite_set_id(sprite, id)
    @ccall StereoKitC.sprite_set_id(sprite::sprite_t, id::Ptr{Cchar})::Cvoid
end

function sprite_addref(sprite)
    @ccall StereoKitC.sprite_addref(sprite::sprite_t)::Cvoid
end

function sprite_release(sprite)
    @ccall StereoKitC.sprite_release(sprite::sprite_t)::Cvoid
end

function sprite_get_aspect(sprite)
    @ccall StereoKitC.sprite_get_aspect(sprite::sprite_t)::Cfloat
end

function sprite_get_width(sprite)
    @ccall StereoKitC.sprite_get_width(sprite::sprite_t)::Int32
end

function sprite_get_height(sprite)
    @ccall StereoKitC.sprite_get_height(sprite::sprite_t)::Int32
end

function sprite_get_dimensions_normalized(sprite)
    @ccall StereoKitC.sprite_get_dimensions_normalized(sprite::sprite_t)::vec2
end

function sprite_draw(sprite, transform, color)
    @ccall StereoKitC.sprite_draw(sprite::sprite_t, transform::Ptr{matrix}, color::color32)::Cvoid
end

function sprite_draw_at(sprite, transform, anchor_position, color)
    @ccall StereoKitC.sprite_draw_at(sprite::sprite_t, transform::matrix, anchor_position::text_align_, color::color32)::Cvoid
end

struct line_point_t
    pt::vec3
    thickness::Cfloat
    color::color32
end

function line_add(start, _end, color_start, color_end, thickness)
    @ccall StereoKitC.line_add(start::vec3, _end::vec3, color_start::color32, color_end::color32, thickness::Cfloat)::Cvoid
end

function line_addv(start, _end)
    @ccall StereoKitC.line_addv(start::line_point_t, _end::line_point_t)::Cvoid
end

function line_add_axis(pose, size)
    @ccall StereoKitC.line_add_axis(pose::pose_t, size::Cfloat)::Cvoid
end

function line_add_list(points, count, color, thickness)
    @ccall StereoKitC.line_add_list(points::Ptr{vec3}, count::Int32, color::color32, thickness::Cfloat)::Cvoid
end
